<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:text="@string/crickets"
        app:layout_constraintBottom_toTopOf="@+id/switch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seekBar1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:text="@string/frogs"
        app:layout_constraintBottom_toTopOf="@+id/switch3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seekBar2"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.994" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:text="@string/wind"
        app:layout_constraintBottom_toTopOf="@+id/switch4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seekBar3"
        app:layout_constraintTop_toBottomOf="@+id/switch2"
        app:layout_constraintVertical_bias="1.0" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:text="@string/forest"
        app:layout_constraintBottom_toTopOf="@+id/switch5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seekBar4"
        app:layout_constraintTop_toBottomOf="@+id/switch3"
        app:layout_constraintVertical_bias="1.0" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:text="@string/rain"
        app:layout_constraintBottom_toTopOf="@+id/switch6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seekBar5"
        app:layout_constraintTop_toBottomOf="@+id/switch4"
        app:layout_constraintVertical_bias="1.0" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:text="@string/ocean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seekBar6"
        app:layout_constraintTop_toBottomOf="@+id/switch5" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar2"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar3"
        app:layout_constraintEnd_toStartOf="@+id/switch2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar1"
        app:layout_constraintVertical_bias="0.995" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar4"
        app:layout_constraintEnd_toStartOf="@+id/switch3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/seekBar4"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar5"
        app:layout_constraintEnd_toStartOf="@+id/switch4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/seekBar5"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar6"
        app:layout_constraintEnd_toStartOf="@+id/switch5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar4"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/seekBar6"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar5" />


</android.support.constraint.ConstraintLayout>